[package]
name = "generator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
khronos-registry-parse  = { git = "https://github.com/pollend/vk-parse.git", branch = "master", features=["opengl"]}
proc-macro2 = "1.0"
quote = "1.0"
nom = "7.1.0"
itertools = "0.10"
bindgen = "0.58"


[dependencies.syn]
version = "1.0"
features = ["full", "extra-traits"]
