[package]
name = "rogl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["loaded", "debug"]
# Link the Vulkan loader at compile time.
linked = []
# Support searching for the Vulkan loader manually at runtime.
loaded = ["libloading"]

debug = []

gl10 = []
gl11 = []
gl12 = []
gl13 = []
gl14 = []
gl15 = []
gl20 = []
gl21 = []
gl30 = []
gl31 = []
gl32 = []
gl33 = []
gl40 = []
gl41 = []
gl42 = []
gl43 = []
gl44 = []
gl45 = []
gl46 = []


[dependencies]
libloading = { version = "0.7", optional = true }
