[package]
name = "rogl"
version = "0.2.1"
edition = "2018"
description = "Rust GL library (rogl): A complete gl binding built for Rust."
authors = [
    "Michael Pollind <mpollind@gmail.com>"
]
readme = "../README.md"
homepage = "https://github.com/pollend/rogl.git"
repository = "https://github.com/pollend/rogl"
license = "Apache-2.0"


[features]
default = ["loaded", "debug"]
# Link the Vulkan loader at compile time.
linked = []
# Support searching for the Vulkan loader manually at runtime.
loaded = ["libloading"]

debug = []

gl10 = []
gl11 = []
gl12 = []
gl13 = []
gl14 = []
gl15 = []
gl20 = []
gl21 = []
gl30 = []
gl31 = []
gl32 = []
gl33 = []
gl40 = []
gl41 = []
gl42 = []
gl43 = []
gl44 = []
gl45 = []
gl46 = []

gles10 = []
gles20 = []
gles30 = []
gles31 = []
gles32 = []


[dependencies]
libloading = { version = "0.7", optional = true }
